Setup hour broadcast between MeetingLive

--- a/apps/interview_planner_web/lib/interview_planner_web/live/meeting_live/components/weekday_component.html.leex
+++ b/apps/interview_planner_web/lib/interview_planner_web/live/meeting_live/components/weekday_component.html.leex
@@ -6,7 +6,10 @@
   </div>
   <div class='hours-grid'>
     <%= for week_day_hour <- @week_day.available_week_hours do %>
-      <%= live_component @socket, InterviewPlannerWeb.MeetingLive.WeekdayHourComponent, id: "iso_#{week_day_hour.iso}", week_day: @week_day, week_day_hour: week_day_hour %>
+      <%= live_component @socket, InterviewPlannerWeb.MeetingLive.WeekdayHourComponent,
+        id: "iso_#{week_day_hour.iso}",
+        week_day_hour: week_day_hour,
+        available: week_day_hour.available %>
     <% end %>
   </div>
 </div>
