Fix WekkPlanner prefill on weekday form

--- a/apps/interview_planner_web/lib/interview_planner_web/live/meeting_live/components/form_component.html.leex
+++ b/apps/interview_planner_web/lib/interview_planner_web/live/meeting_live/components/form_component.html.leex
@@ -14,5 +14,7 @@
   <%= text_input f, :notes %>
   <%= error_tag f, :notes %>
 
+  <%= hidden_input f, :week_planner_id, value: @week_planner_id %>
+
   <%= submit "Save", phx_disable_with: "Saving..." %>
 </form>
