--- a/apps/interview_planner_web/lib/interview_planner_web/live/meeting_live/index.html.leex
+++ b/apps/interview_planner_web/lib/interview_planner_web/live/meeting_live/index.html.leex
@@ -6,6 +6,7 @@
     title: @page_title,
     action: @live_action,
     meeting: @meeting,
+    week_planner_id: @week_planner_id,
     return_to: Routes.meeting_index_path(@socket, :index) %>
 <% end %>
 
