Setup MeetingLive contexts, add in_progress distributed check, apply small styles
- Context: Move calls from MeetingLive context into Communication module
- Add in_progress attribute into WeekDayHour and broadcast it into connected clients
- Add some small css styling depending on status of WeekDayHour

--- a/apps/interview_planner_web/assets/css/app.scss
+++ b/apps/interview_planner_web/assets/css/app.scss
@@ -1,6 +1,8 @@
 /* This file is for your main application css. */
 @import "./phoenix.css";
 @import "../node_modules/nprogress/nprogress.css";
+@import "./week_day.css";
+@import "./week_day_hour.css";
 
 /* LiveView specific classes for your customizations */
 .phx-no-feedback.invalid-feedback,
@@ -88,4 +90,14 @@
   color: #a94442;
   display: block;
   margin: -1rem 0 2rem;
+}
+
+
+// headers
+h1.page-header{
+
+}
+
+.center{
+  text-align: center;
 }
