--- a/apps/interview_planner_web/lib/interview_planner_web/live/meeting_live/index.html.leex
+++ b/apps/interview_planner_web/lib/interview_planner_web/live/meeting_live/index.html.leex
@@ -1,5 +1,3 @@
-<h1>Listing Meetings</h1>
-
 <%= if @live_action in [:new, :edit] do %>
   <%= live_modal @socket, InterviewPlannerWeb.MeetingLive.FormComponent,
     id: @meeting.id || :new,
@@ -18,13 +16,14 @@
   </div>
 </div>
 
+<h1 class="page-header center">My Meetings</h1>
+
 <table>
   <thead>
     <tr>
       <th>Scheduled at</th>
       <th>Notes</th>
-
-      <th></th>
+      <th>Actions</th>
     </tr>
   </thead>
   <tbody id="meetings">
@@ -36,7 +35,7 @@
         <td>
           <span><%= live_redirect "Show", to: Routes.meeting_show_path(@socket, :show, meeting) %></span>
           <span><%= live_patch "Edit", to: Routes.meeting_index_path(@socket, :edit, meeting) %></span>
-          <span><%= link "Delete", to: "#", phx_click: "delete", phx_value_id: meeting.id, data: [confirm: "Are you sure?"] %></span>
+          <span><%= link "Cancel", to: "#", phx_click: "delete", phx_value_id: meeting.id, data: [confirm: "Are you sure?"] %></span>
         </td>
       </tr>
     <% end %>
