Remove edit actions from MeetingLive

--- a/apps/interview_planner_web/assets/css/week_day.css
+++ b/apps/interview_planner_web/assets/css/week_day.css
@@ -6,3 +6,15 @@
   flex: auto;
   text-align: center;
 }
+
+.week-day .day-header{
+  margin: 0px 0px 10px 0px;
+}
+
+.week-day .day-header span{
+  display: block;
+}
+
+.week-day .day-header span.day-name{
+  font-size: 1.3em;
+}
