--- a/apps/interview_planner_web/lib/interview_planner_web/live/meeting_live/components/form_component.html.leex
+++ b/apps/interview_planner_web/lib/interview_planner_web/live/meeting_live/components/form_component.html.leex
@@ -6,14 +6,17 @@
   phx_change: "validate",
   phx_submit: "save" %>
 
-  <%= label f, :scheduled_at %>
-  <%= datetime_select f, :scheduled_at %>
-  <%= error_tag f, :scheduled_at %>
+  <div class='scheduled-container'>
+    <span>
+      <%= formated_scheduled(@changeset.data) %>
+    </span>
+  </div>
 
   <%= label f, :notes %>
   <%= text_input f, :notes %>
   <%= error_tag f, :notes %>
 
+  <%= hidden_input f, :scheduled_at %>
   <%= hidden_input f, :week_planner_id, value: @week_planner_id %>
 
   <%= submit "Save", phx_disable_with: "Saving..." %>
