--- a/apps/interview_planner_web/lib/interview_planner_web/live/meeting_live/index.html.leex
+++ b/apps/interview_planner_web/lib/interview_planner_web/live/meeting_live/index.html.leex
@@ -8,15 +8,20 @@
     return_to: Routes.meeting_index_path(@socket, :index) %>
 <% end %>
 
+<div class='meeting-heading'>
+  <div class="page-header center"><%= planner_heading(@week_planner) %></div>
+  <span class="change-week-planner"><%= live_redirect "Change", to: '#' %></span>
+</div>
+
 <div class="container">
+  <div class='week-planner-header'>
+  </div>
   <div class="row available-week-days">
     <%= for week_day <- @week_days do %>
       <%= live_component @socket, InterviewPlannerWeb.MeetingLive.WeekdayComponent, week_day: week_day %>
     <% end %>
   </div>
 </div>
-
-<h1 class="page-header center">My Meetings</h1>
 
 <table>
   <thead>
